--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "lint-staged": "^7.0.0"
   },
   "engines": {
-    "node": ">=6.9.0",
-    "yarn": ">=1.12.0"
+    "node": ">=8.0.0",
+    "npm": ">=5.7.1"
   },
   "author": "vdfor",
   "license": "GPL-2.0-or-later",
